--- a/build.properties
+++ b/build.properties
@@ -6,15 +6,15 @@ author = masa
 mod_file_name = litematica-fabric
 
 # Current mod version
-mod_version = 0.11.3
+mod_version = 0.12.0
 
 # Required malilib version
-malilib_version = 0.12.0
+malilib_version = 0.13.1
 
 # Minecraft, Fabric and mappings versions
-minecraft_version_out = 1.18.2
-minecraft_version = 1.18.2
-mappings_version = 1.18.2+build.1
+minecraft_version_out = 1.19
+minecraft_version = 1.19
+mappings_version = 1.19+build.1
 
-fabric_loader_version = 0.13.3
-mod_menu_version = 3.1.0
+fabric_loader_version = 0.14.6
+mod_menu_version = 4.0.0-beta.4
